add project page

--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+
   <div class="header-container">
     <ul class="nav justify-content-center navbar">
       <li class="nav-item">
@@ -31,13 +32,49 @@
       </li>
     </ul>
   </div>
+
   <div class="body-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <h1>I'm Fangzhuo Xi</h1>
-    <h2>A Full-Stack Software Engineer</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img class="bottom-mountain" src="images/mountain.png" alt="mountain-img">
+    <div class="card-container">
+
+      <div class="card">
+        <img src="images/FEC.png" class="card-img-top" alt="pharos frontend">
+        <div class="card-body">
+          <h5 class="card-title">Pharos Retail </h5>
+          <p class="card-text">An e-commerce app for clothing products</p>
+          <p class="card-toolkit"><i class="fa-solid fa-screwdriver-wrench"></i> React, html, Styled-Components, CSS,
+            Webpack, AWS EC2, Restful API, Jest and React Testing Library</p>
+          <a href="https://github.com/Team-Pharos/FEC_Lighthouse" class="btn btn-dark">Github Repo</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="images/SDC.png" class="card-img-top" alt="pharos backend">
+        <div class="card-body">
+          <h5 class="card-title">Pharos Retail Backend</h5>
+          <p class="card-text">The back end system for a retail website and optimized to handle large quantities of data
+            and traffic
+          </p>
+          <p class="card-toolkit"><i class="fa-solid fa-screwdriver-wrench"></i> Node.js, PostgreSQL, Sequelize, AWS
+            EC2, Docker, Nginx, K6 and Loader.io</p>
+          <a href="https://github.com/SDC-Egrets/Egrets-Q-A" class="btn btn-dark repo">Github Repo</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="images/blueOcean.png" class="card-img-top" alt="buskin">
+        <div class="card-body">
+          <h5 class="card-title">Buskin </h5>
+          <p class="card-text">A website for street performers and fans that allows fans to follow and support artists
+            and artists to add their events</p>
+          <p class="card-toolkit"><i class="fa-solid fa-screwdriver-wrench"></i> React, Node.js, PostgreSQL, Material
+            UI, Webpack, AWS EC2, Restful API, bcrypt</p>
+          <a href="https://github.com/Blue-Tang-Clan/buskin" class="btn btn-dark">Github Repo</a>
+        </div>
+      </div>
+
+    </div>
   </div>
+
   <div class="bottom-container">
     <div class="communication">
       <a class="footer-link" href="https://www.linkedin.com/in/fangzhuoxi/"><i class="fa-brands fa-linkedin"></i></a>
@@ -45,7 +82,6 @@
       <a class="footer-link" href="mailto:fangzhuoxi1123@gmail.com"><i class="fa-solid fa-envelope"></i></a>
       <p class="cp-right">© 2022 FangzhuoXi</p>
     </div>
-
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
