change image address

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
       </div>
 
       <div class="card">
-        <img src="images/blueOcean.png" class="card-img-top" alt="buskin">
+        <img src="images/BlueOcean.png" class="card-img-top" alt="buskin">
         <div class="card-body">
           <h5 class="card-title">Buskin </h5>
           <p class="card-text">A website for street performers and fans that allows fans to follow and support artists
