--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="header-container">
     <ul class="nav justify-content-center navbar">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        <a class="nav-link active" aria-current="page" href="/">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="projects.html">Projects</a>
