--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <div class="body-container">
     <h1>I'm Fangzhuo Xi</h1>
     <h2>A Full-Stack Software Engineer</h2>
+    <img class="upper-cloud" src="images/cloud.png" alt="cloud-img">
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img class="bottom-mountain" src="images/mountain.png" alt="mountain-img">
   </div>
